add vllm_sweep pytest mark for testing

--- a/pytest.ini
+++ b/pytest.ini
@@ -31,3 +31,5 @@ markers =
     multi_host_cluster: marks test for multi-host setups (llmbox)
     # FileCheck
     filecheck: marks test with FileCheck pattern files to validate generated MLIR
+    #vLLM sweep tool
+    vllm_sweep: marks tests for vLLM sweep tool
