--- a/.github/workflows/schedule-nightly.yml
+++ b/.github/workflows/schedule-nightly.yml
@@ -8,6 +8,9 @@ on:
     - cron: '0 0 * * *'
 
 permissions:
+  contents: write
+  actions: write
+  id-token: write
   packages: write
   checks: write
 
