--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -180,48 +180,60 @@ test_config:
   # Llama 3.2 1B Prefill tests with different seq_len and batch_size
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_128-batch_1-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [push]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_128-batch_2-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_1024-batch_1-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_1024-batch_2-single_device-inference:
     status: EXPECTED_PASSING
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_2048-batch_1-single_device-inference:
     required_pcc: 0.98 # Is 0.986 for n150 and p150
     status: EXPECTED_PASSING
     assert_pcc: false
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_2048-batch_2-single_device-inference:
     required_pcc: 0.98 # Is 0.984 for n150 and p150
     status: EXPECTED_PASSING
     assert_pcc: false
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_4096-batch_1-single_device-inference:
     arch_overrides:
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+
       p150:
         status: EXPECTED_PASSING
         assert_pcc: false # Is 0.895. Debugging blocked by https://github.com/tenstorrent/tt-mlir/issues/6872
+        markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_4096-batch_2-single_device-inference:
     arch_overrides:
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+        markers: [nightly]
       p150:
         status: EXPECTED_PASSING
         assert_pcc: false # Is 0.896. Debugging blocked by https://github.com/tenstorrent/tt-mlir/issues/6872
+        markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_8192-batch_1-single_device-inference:
     status: NOT_SUPPORTED_SKIP
     reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+    markers: [nightly]
 
   llama/causal_lm/pytorch-llama_3_2_1b-llm_prefill-seq_8192-batch_2-single_device-inference:
     status: NOT_SUPPORTED_SKIP
     reason: "Out of memory" # See https://github.com/tenstorrent/tt-mlir/issues/6877
+    markers: [nightly]
