--- a/.github/actions/inspect-changes/action.yml
+++ b/.github/actions/inspect-changes/action.yml
@@ -62,7 +62,7 @@ runs:
             ".github/scripts/download_artifacts.py"
             ".github/scripts/summarize_junit_xmls.py"
             ".github/actions/inspect-changes/*.yml"
-            "tests/runner/**/*.yml"
+            "tests/runner/*"
           )
 
           for file in $CHANGED_FILES; do
@@ -91,20 +91,29 @@ runs:
 
           # Just run forge tests if everything else is skipped but we detect changes under tests/runner/.
           if [[ "$skip_build_and_test" == "true" ]]; then
-            pip install pyyaml
+            push_changed=false
+            pip install pyyaml pytest jsonschema
             for file in $CHANGED_FILES; do
-              if [[ $file == tests/runner/**/*.yml ]]; then
+              if [[ $file == tests/runner/**/*.yml ]] || [[ $file == tests/runner/**/*.yaml ]]; then
+                echo "Config file $file changed"
+                python tests/runner/test_config/validate_with_schema.py "$file" tests/runner/test_config/test_config_schema.json
                 # Get the original file content before PR changes
                 rm -f .original_file.yml
                 git fetch origin "${{ github.event.pull_request.base.sha }}"
                 git show "${{ github.event.pull_request.base.sha }}:$file" >.original_file.yml
                 res=$(python tests/runner/test_config/model_diff.py "$file" .original_file.yml)
                 if [ -z "$res" ] || [ "$res" -eq 1 ]; then
-                  only_run_forge_models=true
-                  skip_build_and_test=false
+                  push_changed=true
                 fi
+              elif [[ $file == tests/runner/* ]]; then
+                push_changed=true
               fi
             done
+            if [[ $push_changed == true ]]; then
+              echo "Other changes under tests/runner/ detected. Will run full tests instead of just forge models."
+              only_run_forge_models=false
+              skip_build_and_test=false
+            fi
           fi
 
           # Detect TT-MLIR dependency updates in PRs.
