--- a/.github/workflows/pr-main.yml
+++ b/.github/workflows/pr-main.yml
@@ -49,48 +49,48 @@ jobs:
     with:
       docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  build-ttxla-explorer:
-    if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
-    uses: ./.github/workflows/call-build.yml
-    name: "Build tt-xla with explorer"
-    secrets: inherit
-    needs: [ inspect-changes, build-image ]
-    with:
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      build_type: explorer
+  # build-ttxla-explorer:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
+  #   uses: ./.github/workflows/call-build.yml
+  #   name: "Build tt-xla with explorer"
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image ]
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     build_type: explorer
 
-  build-ttxla-debug:
-    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
-    uses: ./.github/workflows/call-build-debug.yml
-    name: "Build and test tt-xla (debug with coverage)"
-    secrets: inherit
-    needs: [ inspect-changes, build-image ]
-    with:
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
+  # build-ttxla-debug:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+  #   uses: ./.github/workflows/call-build-debug.yml
+  #   name: "Build and test tt-xla (debug with coverage)"
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image ]
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  test:
-    needs: [ inspect-changes, build-image, build-ttxla-release ]
-    if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    with:
-      test_suite: basic-test.json
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
-      alchemist_artifact_name: ${{ needs.build-ttxla-release.outputs.alchemist_artifact_name }}
+  # test:
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   with:
+  #     test_suite: basic-test.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     alchemist_artifact_name: ${{ needs.build-ttxla-release.outputs.alchemist_artifact_name }}
 
   perf-benchmark-n150:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift-mlir')
     needs: [ inspect-changes, build-image, build-ttxla-release ]
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/install-sfpi-on-perf-from-ttxla
     secrets: inherit
     with:
       project: tt-xla
       run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
       run_id_source: tt-xla
-      ref: main
+      ref: vvukoman/install-sfpi-on-perf-from-ttxla
       perf_regression_check: true
       test-filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
       runs-on-filter: n150
@@ -99,39 +99,39 @@ jobs:
   perf-benchmark-llmbox:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true' && vars.RUN_PERF_ON_UPLIFT == 'true'  && github.event_name == 'pull_request' && contains(github.event.pull_request.labels.*.name, 'uplift-mlir')
     needs: [ inspect-changes, build-image, build-ttxla-release ]
-    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@main
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/install-sfpi-on-perf-from-ttxla
     secrets: inherit
     with:
       project: tt-xla
       run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
       run_id_source: tt-xla
-      ref: main
+      ref: vvukoman/install-sfpi-on-perf-from-ttxla
       perf_regression_check: true
       test-filter: test_llama_3_1_70b_tp
       runs-on-filter: llmbox
       sh-runner: false
 
-  test_forge_models_push:
-    if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ inspect-changes, build-image, build-ttxla-release ]
-    with:
-      test_suite: model-test-push.json
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  # test_forge_models_push:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   with:
+  #     test_suite: model-test-push.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
-  test_models_on_uplift:
-    if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
-    uses: ./.github/workflows/call-test.yml
-    secrets: inherit
-    needs: [ inspect-changes, build-image, build-ttxla-release ]
-    with:
-      test_suite: model-test-extended.json
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  # test_models_on_uplift:
+  #   if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   with:
+  #     test_suite: model-test-extended.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
 
   build-docs:
     if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
@@ -147,11 +147,6 @@ jobs:
       - pre-commit
       - build-image
       - build-ttxla-release
-      - build-ttxla-explorer
-      - build-ttxla-debug
-      - test
-      - test_forge_models_push
-      - test_models_on_uplift
       - perf-benchmark-n150
       - perf-benchmark-llmbox
       - build-docs
