--- a/.github/workflows/manual-test-single.yml
+++ b/.github/workflows/manual-test-single.yml
@@ -2,110 +2,148 @@ name: Run Test Single
 
 on:
   workflow_dispatch:
-    inputs:
-      dir:
-        description: 'Path passed to pytest'
-        required: true
-        type: string
-      mark:
-        description: 'Mark passed to pytest (-m)'
-        required: false
-        type: string
-      contains:
-        description: 'Execute test that contains the specified string (-k)'
-        required: false
-        type: string
-      args:
-        description: 'Additional arguments passed to pytest'
-        required: false
-        type: string
-      runs_on:
-        description: 'Choose runners for running test'
-        required: true
-        type: choice
-        options:
-          - 'n150'
-          - 'n300'
-          - 'p150'
-          - 'n300-llmbox'
-          - 'llmbox-1'
-          - 'llmbox-2'
-      shared_runners:
-        description: 'Run test on the CIv2 runner'
-        required: false
-        default: false
-        type: boolean
-      parallel_groups:
-        description: 'Number of parallel runners for test execution'
-        required: true
-        default: '1'
-        type: choice
-        options:
-          - '1'
-          - '2'
-          - '3'
-          - '4'
-          - '5'
-          - '8'
-          - '10'
-      mlir_override:
-          description: 'Git SHA of commit in tenstorrent/tt-mlir'
-          required: false
-          type: string
 
 permissions:
+  contents: read
   packages: write
   checks: write
-
-run-name: 'Test ( Dir: ${{ inputs.dir }} - Mark: ${{ inputs.mark }} - Run-on: ${{ inputs.runs_on }} - Shared runner: ${{ inputs.shared_runners }} )'
+  pull-requests: write
+  id-token: write
+  actions: write
 
 jobs:
-  build-image:
-    uses: ./.github/workflows/call-build-docker.yml
+  pre-commit:
+    uses: ./.github/workflows/call-pre-commit.yml
     secrets: inherit
-    with:
-      mlir_override: ${{ inputs.mlir_override }}
 
-  build-ttxla:
-    needs: build-image
-    uses: ./.github/workflows/call-build.yml
-    secrets: inherit
-    with:
-      docker_image: ${{ needs.build-image.outputs.docker-image }}
-      mlir_override: ${{ inputs.mlir_override }}
-
-  generate-test-config:
-    needs: build-ttxla
+  inspect-changes:
     runs-on: ubuntu-latest
     outputs:
-      test-config: ${{ steps.generate.outputs.test-config }}
+      skip-build-and-test: ${{ steps.inspect.outputs.skip-build-and-test }}
+      run-pr-tests: ${{ steps.inspect.outputs.run-pr-tests }}
+      run-perf-tests: ${{ steps.inspect.outputs.run-perf-tests }}
+      only-run-forge-models: ${{ steps.inspect.outputs.only-run-forge-models }}
+      run-uplift-model-tests: ${{ steps.inspect.outputs.run-uplift-model-tests }}
     steps:
-      - id: generate
-        run: |
-          TEST_CONFIG=$(jq -n \
-            --arg runs_on '${{ inputs.runs_on }}' \
-            --arg dir '${{ inputs.dir }}' \
-            --arg mark '${{ inputs.mark }}' \
-            --arg shared_runners '${{ inputs.shared_runners }}' \
-            --arg args '${{ inputs.args }}' \
-            --arg contains '${{ inputs.contains }}' \
-            --argjson parallel_groups '${{ inputs.parallel_groups }}' \
-            '[{"runs-on": $runs_on,"name": "Test","dir": $dir,"test-mark": $mark,"shared-runners": $shared_runners,"args": $args,"contains": $contains,"parallel-groups": $parallel_groups}]')
+      - uses: actions/checkout@v4
+      - uses: ./.github/actions/inspect-changes
+        id: inspect
 
-          echo $TEST_CONFIG
+  build-image:
+    needs: [ inspect-changes ]
+    uses: ./.github/workflows/call-build-docker.yml
+    secrets: inherit
 
-          echo "test-config=$(echo "$TEST_CONFIG" | jq -c)" >> $GITHUB_OUTPUT
+  build-ttxla-release:
+    uses: ./.github/workflows/call-build.yml
+    name: "Build tt-xla release"
+    secrets: inherit
+    needs: [ inspect-changes, build-image ]
+    with:
+      docker_image: ${{ needs.build-image.outputs.docker-image }}
 
-  test:
-    if: always() && !cancelled() && inputs.preset != 'tt_forge_models'
-    uses: ./.github/workflows/call-test.yml
-    needs: [ build-image, build-ttxla, generate-test-config ]
+  # build-ttxla-explorer:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
+  #   uses: ./.github/workflows/call-build.yml
+  #   name: "Build tt-xla with explorer"
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image ]
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     build_type: explorer
+
+  # build-ttxla-debug:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+  #   uses: ./.github/workflows/call-build-debug.yml
+  #   name: "Build and test tt-xla (debug with coverage)"
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image ]
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+
+  # test:
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false' && needs.inspect-changes.outputs.only-run-forge-models != 'true'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   with:
+  #     test_suite: basic-test.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image-base }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+  #     wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_release_vllm_tt_artifact_name }}
+  #     alchemist_artifact_name: ${{ needs.build-ttxla-release.outputs.alchemist_artifact_name }}
+
+  perf-benchmark-n150:
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/install-sfpi-on-perf-from-ttxla
     secrets: inherit
     with:
-      test_suite: 'Custom'
-      test_suite_custom: ${{ needs.generate-test-config.outputs.test-config }}
-      docker_image: ${{ needs.build-image.outputs.docker-image-base }}
-      artifact_release_run_id: ${{ needs.build-ttxla.outputs.artifacts_run_id }}
-      wheel_release_artifact_name: ${{ needs.build-ttxla.outputs.wheel_artifact_name }}
-      wheel_release_vllm_tt_artifact_name: ${{ needs.build-ttxla.outputs.wheel_release_vllm_tt_artifact_name }}
-      alchemist_artifact_name: ${{ needs.build-ttxla.outputs.alchemist_artifact_name }}
+      project: tt-xla
+      run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      run_id_source: tt-xla
+      ref: vvukoman/install-sfpi-on-perf-from-ttxla
+      perf_regression_check: true
+      test-filter: resnet,llama_3_1_8b_instruct,qwen_3_4b_embedding
+      runs-on-filter: n150
+      sh-runner: false
+
+  perf-benchmark-llmbox:
+    needs: [ inspect-changes, build-image, build-ttxla-release ]
+    uses: tenstorrent/tt-forge/.github/workflows/perf-benchmark.yml@vvukoman/install-sfpi-on-perf-from-ttxla
+    secrets: inherit
+    with:
+      project: tt-xla
+      run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+      run_id_source: tt-xla
+      ref: vvukoman/install-sfpi-on-perf-from-ttxla
+      perf_regression_check: true
+      test-filter: test_llama_3_1_70b_tp
+      runs-on-filter: llmbox
+      sh-runner: false
+
+  # test_forge_models_push:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   with:
+  #     test_suite: model-test-push.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+
+  # test_models_on_uplift:
+  #   if: needs.inspect-changes.outputs.run-uplift-model-tests == 'true'
+  #   uses: ./.github/workflows/call-test.yml
+  #   secrets: inherit
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   with:
+  #     test_suite: model-test-extended.json
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+  #     artifact_release_run_id: ${{ needs.build-ttxla-release.outputs.artifacts_run_id }}
+  #     wheel_release_artifact_name: ${{ needs.build-ttxla-release.outputs.wheel_artifact_name }}
+
+  # build-docs:
+  #   if: needs.inspect-changes.outputs.skip-build-and-test == 'false'
+  #   needs: [ inspect-changes, build-image, build-ttxla-release ]
+  #   uses: ./.github/workflows/call-check-docs-build.yml
+  #   secrets: inherit
+  #   with:
+  #     docker_image: ${{ needs.build-image.outputs.docker-image }}
+
+  check-all-green:
+    if: always()
+    needs:
+      - pre-commit
+      - build-image
+      - build-ttxla-release
+      - perf-benchmark-n150
+      - perf-benchmark-llmbox
+    runs-on: Ubuntu-latest
+    steps:
+    - name: Check if the needed jobs succeeded or failed
+      uses: re-actors/alls-green@release/v1
+      with:
+        allowed-skips: build-image, build-ttxla-release, build-ttxla-explorer, build-ttxla-debug, test, test_forge_models_push, build-docs, test_models_on_uplift, perf-benchmark-n150, perf-benchmark-llmbox
+        jobs: ${{ toJSON(needs) }}
