--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -1492,6 +1492,9 @@ test_config:
 
   phi3/phi_3_5/pytorch-mini_instruct-single_device-inference:
     status: EXPECTED_PASSING
+    arch_overrides:
+      p150:
+        required_pcc: 0.985 # Calculated: pcc=0.9885763642059768 - https://github.com/tenstorrent/tt-xla/issues/3212
 
   bi_lstm_crf/pytorch-default-single_device-inference:
     status: KNOWN_FAILURE_XFAIL
