--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -23,7 +23,7 @@ test_config:
 
   falcon/pytorch-tiiuae/Falcon3-10B-Base-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
-    required_pcc: 0.98 # Is 0.984(p150)
+    required_pcc: 0.975 # Calculated: pcc=0.9791326592500703 - https://github.com/tenstorrent/tt-xla/issues/3212
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/pytorch-0_5b_instruct-llm_decode-single_device-inference:
@@ -40,6 +40,7 @@ test_config:
 
   qwen_2_5/causal_lm/pytorch-7b_instruct-llm_decode-single_device-inference:
     supported_archs: ["p150"] # Runs as tensor_parallel for wormhole.
+    required_pcc: 0.970 # Calculated: pcc=0.9717385717419725 - https://github.com/tenstorrent/tt-xla/issues/3212
     status: EXPECTED_PASSING
 
   qwen_2_5/causal_lm/pytorch-14b_instruct-llm_decode-single_device-inference:
