--- a/tests/runner/test_config/torch/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch/test_config_inference_single_device.yaml
@@ -1568,8 +1568,8 @@ test_config:
   phi3/phi_3_5_vision/pytorch-instruct-single_device-inference:
     arch_overrides:
       p150:
-        status: KNOWN_FAILURE_XFAIL
-        reason: "Out of Memory: Not enough space to allocate 52428800 B DRAM buffer across 12 banks, where each bank needs to store 4370432 B, but bank size is only 1073741792 B"
+        status: NOT_SUPPORTED_SKIP
+        reason: "Test times out https://github.com/tenstorrent/tt-xla/issues/3213"
       n150:
         status: NOT_SUPPORTED_SKIP
         reason: "Running the test CRASHED with signal 9 https://github.com/tenstorrent/tt-xla/issues/2254"
