--- a/.github/workflows/manual-test.yml
+++ b/.github/workflows/manual-test.yml
@@ -25,6 +25,7 @@ on:
           - 'model-test-passing-weekly.json'
           - 'model-test-weekly.json'
           - 'vllm-model-tests.json'
+          - 'vllm-model-tests-nightly.json'
           - 'Custom'
       test_suite_custom:
         description: 'Custom test suite json'
