update passing LLM tests from experimental nightly (#3201)
### Ticket
Ref : [Experimental
Nightly](https://github.com/tenstorrent/tt-xla/actions/runs/21738893468)

### Problem description
There are some models passing in experimental Nightly. Added them to
main nightly

### What's changed
* Added test configs for the passing llm and torch models in
single-device inference

--- a/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
+++ b/tests/runner/test_config/torch_llm/test_config_inference_single_device.yaml
@@ -129,6 +129,12 @@ test_config:
   llama/causal_lm/pytorch-TinyLlama_v1.1-llm_decode-single_device-inference:
     status: EXPECTED_PASSING
 
+  llama/causal_lm/pytorch-llama_3_2_1b_instruct-llm_prefill-single_device-inference:
+    status: EXPECTED_PASSING
+
+  llama/causal_lm/pytorch-llama_3_2_3b_instruct-llm_prefill-single_device-inference:
+    status: EXPECTED_PASSING
+
   qwen_2_5/causal_lm/pytorch-7b-llm_decode-single_device-inference:
     arch_overrides:
       p150:
