tagging logic change

--- a/.github/workflows/call-publish-release-wheel.yml
+++ b/.github/workflows/call-publish-release-wheel.yml
@@ -16,7 +16,7 @@ on:
         type: string
         required: true
       is_nightly_release:
-        description: 'Is the wheel a nigthly release'
+        description: 'Is the wheel a nighyly release'
         type: boolean
         required: true
       should_overwrite_release:
